// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<styled.aside
  className="aside-menu"
>
  <div
    className="callout m-0 py-2 text-center text-uppercase"
  >
    <small>
      <b>
        RPThreadTracker News
      </b>
    </small>
  </div>
  <hr
    className="mx-3 my-0"
  />
</styled.aside>
`;

exports[`rendering snapshots should render valid snapshot with items 1`] = `
<styled.aside
  className="aside-menu"
>
  <div
    className="callout m-0 py-2 text-center text-uppercase"
  >
    <small>
      <b>
        RPThreadTracker News
      </b>
    </small>
  </div>
  <hr
    className="mx-3 my-0"
  />
  <AsideNewsRow
    item={
      Object {
        "postId": "12345",
        "postTitle": "Test Title",
      }
    }
    key="12345"
  />
  <AsideNewsRow
    item={
      Object {
        "postId": "23456",
        "postTitle": "Test Title 2",
      }
    }
    key="23456"
  />
  <AsideNewsRow
    item={
      Object {
        "postId": "34567",
        "postTitle": "Test Title 3",
      }
    }
    key="34567"
  />
</styled.aside>
`;
